public/stylesheets/app.css
html, body {
	margin: 0;
	height: 100%;
	width: 100%;
	/* font-family: "Montserrat", sans-serif; */
	font-family: "Francois One", sans-serif;
	font-size: 16px;
	letter-spacing: 1px;
	text-align: center;
	color: white;
}

body {
	min-height: 100%;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: 3fr auto 1fr 1fr;
	grid-template-areas: 
		"header header header"
		"main main main"
		"contact contact contact"
		"footer footer footer";
}

h1 {
	font-size: 2.5em;
	text-transform: uppercase;
	margin: 0;
	padding: 0 50px;
	/* font-family: "Francois One", sans-serif; */
	/* letter-spacing: 2px; */
}

h2 {
	color: #dbc5c5;
	font-size: 1.5em;
	/* font-family: "Francois One", sans-serif; */
	text-transform: uppercase;
	margin: 10px;
}

h3 {
	font-size: 2.5em;
	/* font-family: "Francois One", sans-serif; */
	/* letter-spacing: 1px; */
	line-height: 1em;
}

.title-card {
	/* background: linear-gradient(to right, rgba(142, 44, 44, 0.25), rgba(142, 44, 44, 0.5), 
		rgba(142, 44, 44, 0.75),rgba(142, 44, 44, 0.75), 
		rgba(142, 44, 44, 0.5), rgba(142, 44, 44, 0.25));
	border: 2px solid white; */
	background-color: white;
	color: #8d2f2f;
	padding: 0.5em 0.5em;
	margin-bottom: 0.5em;
	max-width: 500px;
}

h4 {
	font-size: 1.25em;
	margin: 1em 0 0.5em 0;
	/* font-family: "Francois One", sans-serif; */
}

h5 {
	font-size: 1em;
	margin: 1em 0;
}

p {
	font-family: "Roboto", sans-serif;
	letter-spacing: 0;
}
/* 	////////////////////////////////////////////
	HEADER - Logo, name, title, and nav
	////////////////////////////////////////////	*/

.header {
	grid-area: header;
	display: flex;
	justify-content: center;
	background-color: #a02828;
	background-image: url(/images/Chalkboard.png);
	background-repeat: repeat;
	background-size: contain;
	background-attachment: fixed;
	background-position: center;
	border-bottom: 1px solid #850606;
	box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.35);
	padding: 3em 0 5em 0;
	-webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
	clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
}

.signature {
	width: 150px;
	height: 150px;
	margin: 1em;
}

/* 	////////////////////////////////////////////
	MAIN - main body content organization in grid
	////////////////////////////////////////////	*/

.grid {
	position: absolute;
	top: 50px;
	width: 100%;
	min-height: 100%;
}

.main {
	grid-area: main;
	min-height: 100%;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: auto;
}

.section-header {
	width: 175px;
	margin: 75px auto 1.25em auto;
}

#projects, #resume, #about, #reviews {
	grid-column: 1 / span 3;
}

#resume, #about, #reviews {
	max-width: 1600px;
	margin: 0 auto;
	overflow: hidden;
}

.btn-normal {
	color: #dbc5c5;
	margin: 0.5em 0.5em;
	padding: 0.5em;
	text-decoration: none;
	border: 1px solid #dbc5c5;
}

.btn-normal p {
	margin: 0 5px;
}

.btn-normal:hover {
    color: white;
    border-color: white;
}

.btn-normal:active {
    color: #ad9c9c;
    border-color: #ad9c9c;
    background-color: #6d1110;
}

/* 	////////////////////////////////////////////
	PROJECTS SECTION - 1 main project, 2 - 3 sub projects
	////////////////////////////////////////////	*/ 

.proj-main {
	height: 600px;
}

.proj-sub {
	height: 400px;
	align-content: center;
	padding: 1.5em;
	min-width: 290px;
}

.section-card {
	grid-column: 1 / span 3;
	margin: 0 auto;
	border-radius: 20px;
	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.35);
	width: 90%;
	max-width: 1400px;
	overflow: hidden;
}

/* 	////////////////////////////////////////////
	RESUME SECTIONS - languages/software/education & companies
	////////////////////////////////////////////	*/ 

#lang-soft-edu {
	padding: 0 7% 75px 7%;
	background-image: url(/images/Chalkboard.png);
	background-repeat: repeat;
	background-size: contain;
	background-attachment: fixed;
	margin-top: -50px;
}

#lang-soft-edu h4,{
	color: white;
	margin-top: 1.5em;
}

.icon-circle {
	display: inline-block;
	border-radius: 50%;
	padding: 2.5em;
	background-color: white;
	margin: 75px auto 0 auto;
}

.icon-circle i {
	color: #8c1919;
	font-size: 2em;
}

.company-logo-wrap {
	border-radius: 50%;
	display: inline;
	background-color: white;
	margin: 0 auto;
	overflow: hidden;
}

.company-logo-double {
	justify-content: center;
}

.company-logo-double i {
	font-size: 2.5em;
	align-self: center;
	margin: 10px;
}

.company-logo {
	width: 100px;
	height: 100px;
}

.company {
	justify-content: space-between;
	background-color: #c8aaaa;
	box-shadow: 0 0 50px 2px rgba(0, 0, 0, 0.5);
}

.pink-background {
	background-color: #c8aaaa;
}

.company-section {
	padding: 2em;
	margin: 0;
	justify-content: center;
}

.company-title-section {
	max-width: 200px;
}

.company-img {
	background-color: #a97e7e;
	min-width: 225px;
}

.company-proj {
	min-width: 225px;
	min-height: 225px;
}

.most-recent-company {
	margin-top: -55px;
}

.store-badge {
	width: auto;
	height: 40px;
	padding: 0 4px;
}

.store-badge-wrap {
	justify-content: center;
	margin: 10px 0;
}

.btn-badge {
	color: white;
	background-color: black;
	border-radius: 10px;
	border: 1px solid lightgrey;
	padding: 0.2em 0.5em;
	text-decoration: none;
}

.btn-badge-first-p {
	font-size: 0.55em;
}

.btn-badge i {
	font-size: 1.25em;
	display: inline;
}

.btn-badge p {
	margin: 0 0 0 0.5em;
	align-self: center;
}

.banner-red {
	color: #dbc5c5;
	display: flex;
	align-content: center;
	justify-content: center;
	min-height: 50px;
	text-align: center;
	padding: 0.5em 0 1.5em 0;
	border-top: 1px solid rgba(0, 0, 0, 0.25);
	background-color: #8c1919;
	-webkit-clip-path: polygon(0 0, 100% 0, 100% 50%, 0 100%);
	clip-path: polygon(0 0, 100% 0, 100% 50%, 0 100%);
}

.banner-red-reverse {
	-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 50%);
	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 50%);
}

.banner-red h4 {
	color: white;
	margin: 1.25em;
}

.banner-red span {
	margin-left: 10px;
}

.banner-red a {
	color: white;
	text-decoration: none;
}

.banner-red a:hover {
	color: black;
}
/* ... */

